--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,3 +18,7 @@ steps:
     publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
     tasks: 'assembleDebug'
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: 'pwd'
