Update azure-pipelines.yml for Azure Pipelines
Added artifacts task in the pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,15 @@ steps:
     publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
     tasks: 'assembleDebug'
+- task: DownloadPipelineArtifact@2
+  inputs:
+    buildType: 'specific'
+    project: 'e518fa51-8b93-46bf-8394-5ec55ff25b3a'
+    definition: '2'
+    buildVersionToDownload: 'latest'
+    allowPartiallySucceededBuilds: true
+    allowFailedBuilds: true
+    targetPath: '$(Pipeline.Workspace)'
 - task: PowerShell@2
   inputs:
     targetType: 'inline'
